# examples

./: .gitignore  README.md
cpp/: .gitignore
cpp/nestedTypeListIter/: .gitignore  CMakeLists.txt  Makefile  main.cpp
cpp/templateSpecialiseDLLExport/: CMakeLists.txt
cpp/templateSpecialiseDLLExport/lib/: CMakeLists.txt  shared-test.cxx  shared-test.h
forth/01/: README  test.fs
forth/02/: test.fs
kotlin/annotations/: annotations.kt
kotlin/array/: array.kt
kotlin/auto_cast/: auto_cast.kt
kotlin/collectToHashMap/: .gitignore
kotlin/collectToHashMap/src/main/kotlin/: ToLHM.kt
kotlin/collectToHashMap/src/test/kotlin/: test.kt
kotlin/for/: for.kt
kotlin/func_wrap/: func_wrap.kt
kotlin/interfaces/: interfaces.kt
kotlin/list_ext_func/: list_ext_func.kt
kotlin/opaque_type/: opaque_type.kt
python/call-stack/: main.py
python/ete/: 1.py  2.py  3.py  readme.md
python/mail/: mail_test.py
python/regex/: re.py
python/subprocess_git_version/: test.py
rust/async_fn_ptr/: Cargo.toml
rust/async_fn_ptr/src/: main.rs
rust/dynamo/: .env  Cargo.toml
rust/dynamo/src/: main.rs
rust/env_files/: .env  Cargo.toml
rust/env_files/src/: main.rs
rust/env_files_2/: .env  Cargo.toml  default
rust/env_files_2/src/: main.rs
rust/env_files_3/: .env  Cargo.toml
rust/env_files_3/src/: main.rs
rust/python-interop/: Cargo.toml  README.md  example.py  pyproject.toml
rust/python-interop/src/: main.rs
rust/utoipa_path_bug/: Cargo.toml
rust/utoipa_path_bug/src/: main.rs
